# ChatBotSynthetic

./: .gitignore  CLAUDE.md  SYNTHETIC_DATA.MD  colab_setup.sh  main.py  phase1_outputs_new.json  pyproject.toml  setup.sh  sft-heniken-chatbot.ipynb  vllm_serve.sh  web_ui.sh
configs/: chat_template.jinja2  sft.yaml
data/: Chat Script_For Chatbot Demo.xlsx  extracted_procedure.json  procedure.json  raw_conversations.json  refined_conversations.jsonl  synthetic_conversation.json  synthetic_conversations.jsonl  thinking_conversations.json
scripts/: add_tool_calling.py  check_reasoning_content.py  dataset_prepare.py  merge_model.py  mock_tools.py  train_grpo.py  train_sft.py
setup_scripts/: cuda.sh  unsloth_vllm.sh
synthetic_pipeline/: graph.py  n0_classify_conversation.py  n1_refine_conversation.py  n2_synthetic_conversations.py  state.py
sythetic_agents/: conversation_synthetic.py  procedure_assignment.py  thinking_teacher.py
sythetic_agents/tool/: __init__.py
tests/: __init__.py  test_dataset_loader.py  test_rewards.py  validate_tool_schema.py
training/: README.md  __init__.py
training/grpo/: trainer.py
training/grpo/rewards/: __init__.py  answer.py  format_think.py
training/sft/: __init__.py  config_loader.py  dataset_loader.py  model_loader.py  trainer.py
vllm/: fake_serve.py  test_api.py
