[project]
name = "chatbotsynthetic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.4.2",
    "dotenv>=0.9.9",
    "langchain[openai]>=1.2.0",
    "langgraph>=1.0.5",
    "pytest>=9.0.2",
    "unsloth>=2025.11.1",
]
